[package]
name = "klerk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-session = {version = "0.9.0", features = ["cookie-session", "redis-rs-session"] }
actix-web = "4"
actix-web-actors = "4.3.0"
chrono = "0.4.38"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
paris = { version = "1.5", features = ["macros", "timestamps"] }
serde = "1.0.204"
serde_json = "1.0.120"
sha2 = "0.10.8"
queues = "1.0.2"

[dependencies.mongodb]
version = "3.0.1"
features = ["sync", "dns-resolver", "openssl-tls", "aws-auth"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
